--- a/web/css/all.css
+++ b/web/css/all.css
@@ -305,13 +305,14 @@ footer {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    height: 100px;
-    width: 200px;
+    height: 170px;
+    width: 300px;
     padding: 20px;
     background: #fff;
     opacity: 0.2;
     transition: opacity 0.5s ease;
     border: 1px solid #ccc;
+    line-height: 1.5;
 }
 
 #player:hover {
@@ -364,4 +365,14 @@ footer {
     border: 5px dashed #ccc;
     color: #222;
     cursor: pointer;
+}
+
+.copyright {
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    font-family: "Myriad Pro Cond", sans-serif;
+    text-transform: uppercase;
+    color: #4d4d4d;
+    padding-top: 28px;
 }
