--- a/web/partials/profile.html
+++ b/web/partials/profile.html
@@ -9,9 +9,9 @@
     <li>Status: {{user.access | userAccessFilter}}</li>
 </ul><br>
 <div class="button" ng-show="(user.id == myInfo.id) || (myInfo.access == 2)" ng-click="edit(user)">Edit user</div><br><br>
-<a class="button" ng-show="(user.id == myInfo.id)" href="/#/audio/buylist">Buy List</a><br><br>
+<a class="button" ng-show="(user.id == myInfo.id) && (myInfo.access == 0)" href="/#/audio/buylist">Buy List<br><br></a>
 
-<a ng-show="(myInfo.access == 2)" href="/#/admin/users" class="button">Admin panel</a>
+<a ng-show="(myInfo.access == 2) && (user.id == myInfo.id)" href="/#/admin/users" class="button">Admin panel</a>
 <br><br>
 
         <h1 class="h1">My tracks</h1>
